argo-workflows/ingress-workflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-workflow
  namespace: argo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  # IngressClassName 추가
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflow
        pathType: Exact
